--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -45,7 +45,7 @@ const { activeNav } = Astro.props;
           </div>
         </button>
         <ul id="menu-items" class="display-none sm:flex">
-          <li>
+          <!-- <li>
             <a href="/posts" class={activeNav === "posts" ? "active" : ""}>
               Posts
             </a>
@@ -59,7 +59,7 @@ const { activeNav } = Astro.props;
             <a href="/about" class={activeNav === "about" ? "active" : ""}>
               About
             </a>
-          </li>
+          </li> 
           <li>
             <LinkButton
               href="/search"
@@ -77,7 +77,7 @@ const { activeNav } = Astro.props;
                 ></path>
               </svg>
             </LinkButton>
-          </li>
+          </li> -->
           <li>
             {
               SITE.lightAndDarkMode && (
@@ -116,7 +116,7 @@ const { activeNav } = Astro.props;
     @apply relative flex w-full items-start justify-between p-4 sm:items-center sm:py-8;
   }
   .logo {
-    @apply absolute py-1 text-xl font-semibold sm:static sm:text-2xl;
+    @apply absolute py-1 text-xl font-semibold sm:static sm:text-2xl whitespace-nowrap;
   }
   .hamburger-menu {
     @apply self-end p-2 sm:hidden;
