value colors finished

--- a/src/components/SkillTable.astro
+++ b/src/components/SkillTable.astro
@@ -16,7 +16,37 @@ const {caption} = Astro.props;
 </table>
 
 <style is:global>
+  ._0 {
+    @apply text-blue-700;
+  }
   ._1 {
     @apply text-blue-500;
+  }
+  ._2 {
+    @apply text-blue-300;
+  }
+  ._3 {
+    @apply text-yellow-200;
+  }
+  ._4 {
+    @apply text-yellow-500;
+  }
+  ._5 {
+    @apply text-orange-400;
+  }
+  ._6 {
+    @apply text-orange-600;
+  }
+  ._7 {
+    @apply text-orange-800;
+  }
+  ._8 {
+    @apply text-red-300;
+  }
+  ._9 {
+    @apply text-red-500;
+  }
+  ._10 {
+    @apply text-red-700;
   }
 </style>
