--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,10 +10,9 @@ import Layout from "@layouts/Layout.astro";
     <section>
       <div class="flex mt-10">
         <img
-          class="mx-auto"
+          class="mx-auto w-full"
           src="/assets/v-card.svg"
           alt="V-Card"
-          width="100%"
         />
       </div>
     </section>
