--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,6 +74,16 @@ const socialImageURL = new URL(
       )
     }
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P1Z8YLMBL7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-P1Z8YLMBL7');
+    </script>
+
     <script is:inline src="/toggle-theme.js"></script>
   </head>
   <body>
