--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -76,7 +76,7 @@ const socialImageURL = new URL(
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P1Z8YLMBL7"></script>
-    <script>
+    <script is:inline>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
