--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -79,7 +79,7 @@ const socialImageURL = new URL(
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P1Z8YLMBL7"></script>
     <script is:inline>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag(){window.dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-P1Z8YLMBL7');
