--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import { LOGO_IMAGE, SITE } from "@config";
 import Hr from "./Hr.astro";
-import LinkButton from "./LinkButton.astro";
+// import LinkButton from "./LinkButton.astro";
 
 import logoPNG from "/assets/logo.png";
 import logoSVG from "/assets/logo.svg";
@@ -10,7 +10,7 @@ export interface Props {
   activeNav?: "posts" | "tags" | "about" | "search";
 }
 
-const { activeNav } = Astro.props;
+// const { activeNav } = Astro.props;
 ---
 
 <header>
