--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -10,12 +10,12 @@ export interface Props {
 const { centered = false } = Astro.props;
 ---
 
-<div class={`social-icons ${centered ? "flex" : ""}`}>
+<div class={`social-icons ${centered ? "flex" : ""} my-2`}>
   {
     SOCIALS.filter(social => social.active).map(social => (
       <LinkButton
         href={social.href}
-        className="link-button"
+        className="link-button ml-3"
         title={social.linkTitle}
       >
         <Fragment set:html={socialIcons[social.name]} />
