--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -7,12 +7,11 @@ import Footer from "@components/Footer.astro";
 import Card from "@components/Card";
 import LinkButton from "@components/LinkButton.astro";
 import slugify from "@utils/slugify";
-import type { CollectionEntry } from "astro:content";
 
 export interface Props {
   pageNum: number;
   totalPages: number;
-  posts: CollectionEntry<"blog">[];
+  posts: any[];
 }
 
 const { pageNum, totalPages, posts } = Astro.props;
